fixed hamburger menu links spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,7 +843,7 @@ li {
   .company-info > * { padding-top: 10px;}
   .nav-links { display: none;}
   .hamburger.active .bar:nth-child(2) { opacity: 0;}
-  .hamburger.active .bar:nth-child(1) { transform: translateY(8px) rotate(45deg);}
+  .hamburger.active .bar:nth-child(1) { transform: translateY(2px) rotate(45deg);}
   .hamburger.active .bar:nth-child(3) { transform: translateY(-8px) rotate(-45deg);}
   .services-flex { flex-direction: column;}
   .services { margin-top: 70px;}
@@ -893,6 +893,7 @@ li {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #101010;
     position: fixed;
